--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,44 @@
 <app-navbar></app-navbar>
 
-<div id="map"></div>
+
+<mat-sidenav-container class="example-sidenav-fab-container">
+
+  <mat-sidenav #sidenav position="end" mode="side" opened="false">
+    <button mat-mini-fab class="example-fab" (click)="sidenav.toggle()">
+      <mat-icon>add</mat-icon>
+    </button>
+    <div class="sidebar">
+      Lorem ipsum dolor sit amet, pede a libero aenean phasellus, lectus metus sint ut risus, fusce vel in pellentesque. Nisl rutrum
+      etiam morbi consectetuer tempor magna, aenean nullam nunc id, neque vivamus interdum sociis nulla scelerisque sem,
+      dolor id wisi turpis magna
+    </div>
+  </mat-sidenav>
+
+  <div id="map"></div>
+
+  <div class="overlay" fxLayout="row" fxLayoutAlign="end start">
+    <div fxFlex="1 1 auto">
+    </div>
+
+    <div class="col-toggle-buttons" fxFlex="10">
+
+      <mat-button-toggle-group #group="matButtonToggleGroup">
+
+        <mat-button-toggle value="map" checked="true">
+          <mat-icon>map</mat-icon>
+        </mat-button-toggle>
+
+        <mat-button-toggle value="tune">
+          <mat-icon>tune</mat-icon>
+        </mat-button-toggle>
+
+      </mat-button-toggle-group>
+
+      <button mat-mini-fab class="example-fab" (click)="sidenav.toggle()">
+        <mat-icon>add</mat-icon>
+      </button>
+
+    </div>
+  </div>
+
+</mat-sidenav-container>
