AWESOME slidenav idea

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <app-navbar></app-navbar>
 
-
 <mat-sidenav-container class="example-sidenav-fab-container">
 
   <mat-sidenav #sidenav position="end" mode="side" opened="false">
@@ -14,11 +13,9 @@
     </div>
   </mat-sidenav>
 
-  <div id="map"></div>
+  <app-map></app-map>
 
-  <div class="overlay" fxLayout="row" fxLayoutAlign="end start">
-    <div fxFlex="1 1 auto">
-    </div>
+  <div style="" class="overlay" fxLayout="row" fxLayoutAlign="end start">
 
     <div class="col-toggle-buttons" fxFlex="10">
 
