--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,6 @@
 <mat-sidenav-container class="example-sidenav-fab-container">
 
   <mat-sidenav #sidenav position="end" mode="side" opened="false">
-    <button mat-mini-fab class="example-fab" (click)="sidenav.toggle()">
-      <mat-icon>add</mat-icon>
-    </button>
     <div class="sidebar">
       Lorem ipsum dolor sit amet, pede a libero aenean phasellus, lectus metus sint ut risus, fusce vel in pellentesque. Nisl rutrum
       etiam morbi consectetuer tempor magna, aenean nullam nunc id, neque vivamus interdum sociis nulla scelerisque sem,
@@ -32,7 +29,7 @@
       </mat-button-toggle-group>
 
       <button mat-mini-fab class="example-fab" (click)="sidenav.toggle()">
-        <mat-icon>add</mat-icon>
+        <mat-icon>location_on</mat-icon>
       </button>
 
     </div>
