map wrap working ok, scared of breaking it

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
 
   <app-map></app-map>
 
-  <div style="" class="overlay" fxLayout="row" fxLayoutAlign="end start">
+  <div class="overlay" fxLayout="row" fxLayoutAlign="end start">
 
     <div class="col-toggle-buttons" fxFlex="10">
 
