preparing to install snazzywindow

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,8 +22,8 @@
           <mat-icon>map</mat-icon>
         </mat-button-toggle>
 
-        <mat-button-toggle value="tune">
-          <mat-icon>tune</mat-icon>
+        <mat-button-toggle value="list">
+          <mat-icon>list</mat-icon>
         </mat-button-toggle>
 
       </mat-button-toggle-group>
