--- a/src/app/hover-window/hover-window.component.html
+++ b/src/app/hover-window/hover-window.component.html
@@ -1,7 +1,21 @@
 <div class="hover-window-content">
-  <strong>
-    {{ data.name }}<br>
-    {{ data.status }}<br>
-    {{ data.alert }}<br>
-  </strong>
+
+  <h2 class="title">
+    {{location}}
+  </h2>
+
+  <hr>
+
+  <table class="table yield-data mat-caption">
+    <tbody>
+      <tr *ngFor="let row of data">
+        <td class="hover-table-icon">
+          <img src="{{ row.value > 70 ? circleGreen : circleRed }}" alt="">
+        </td>
+        <td class="hover-table-cat">{{ row.cat }}</td>
+        <td class="hover-table-value {{ row.value > 70 ? textGreen : textRed }}">{{ row.value }} %</td>
+      </tr>
+    </tbody>
+  </table>
+
 </div>
