--- a/src/app/hover-window/hover-window.component.html
+++ b/src/app/hover-window/hover-window.component.html
@@ -1,19 +1,19 @@
 <div class="hover-window-content">
 
-  <h2 class="title">
-    {{location}}
-  </h2>
+  <div class="mat-subheading-2">
+    {{data.location}}
+  </div>
 
   <hr>
 
   <table class="table yield-data mat-caption">
     <tbody>
-      <tr *ngFor="let row of data">
+      <tr *ngFor="let row of data.yieldData">
         <td class="hover-table-icon">
           <img src="{{ row.value > 70 ? circleGreen : circleRed }}" alt="">
         </td>
         <td class="hover-table-cat">{{ row.cat }}</td>
-        <td class="hover-table-value {{ row.value > 70 ? textGreen : textRed }}">{{ row.value }} %</td>
+        <td class="hover-table-value {{ row.value > 70 ? 'accent' : 'warn' }}">{{ row.value }} %</td>
       </tr>
     </tbody>
   </table>
