--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,8 @@
 <mat-sidenav-container class="example-sidenav-fab-container">
 
   <mat-sidenav #sidenav position="end" mode="side" opened="false">
-    <app-sidenav-content [data]="data"></app-sidenav-content>
+    <app-sidenav-content [data]="currentPlant"></app-sidenav-content>
+    <!-- <app-sidenav-content [data]=""></app-sidenav-content> -->
   </mat-sidenav>
 
   <app-map></app-map>
