--- a/src/theme.scss
+++ b/src/theme.scss
@@ -215,11 +215,12 @@ mat-toolbar {
   background-color: #fff; 
 }
 
-.click-container {
+.click-window-content {
   width: 130px;
 }
 
 .custom-heading {
+  height: 51px;
   text-align: center;
   padding: 0;
   position: absolute;
@@ -227,11 +228,9 @@ mat-toolbar {
   top: 0;
   right: 0;
   left: 0;
-  height: 55px;
   z-index: 1; 
   color: white;
 }
-
 
 .custom-heading > .mat-title {
   margin-top: 12px;
@@ -239,7 +238,7 @@ mat-toolbar {
 
 .custom-content {
   /* color: #333; */
-  margin: 49px 0 0;
+  margin: 30px 0 0;
   padding-bottom: 0;
   text-align: center;
   background: none;
