--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,4 +1,5 @@
 @import '~@angular/material/theming';
+@import '~angular-tree-component/dist/angular-tree-component.css';
 
 @include mat-core();
 
@@ -6,6 +7,7 @@ $idc-primary: mat-palette($mat-blue, A200);
 $idc-accent:  mat-palette($mat-green, A700);
 $idc-warn:    mat-palette($mat-red, 400);
 $light-grey: mat-color(mat-palette($mat-grey, 200));
+$light-blue: mat-color(mat-palette($mat-blue, 50));
 
 $idc-theme: mat-light-theme($idc-primary, $idc-accent, $idc-warn);
 
@@ -40,7 +42,6 @@ $idc-typography: mat-typography-config(
 
 @include angular-material-typography($idc-typography);
 
-
 html, body, #map, agm-map {
   width: 100%;
   height: 100%;
@@ -74,8 +75,11 @@ mat-toolbar {
   right: 100px;
 }
 
-.example-fill-remaining-space {
+.fill-remaining-space {
   flex: 1 1 auto;
+}
+.vert-spacer-30 {
+  margin: 30px 0;
 }
 
 .nav-icon {
@@ -144,17 +148,17 @@ mat-toolbar {
   color: white;
 }
 
-.example-sidenav-fab-container {
+.sidenav-container {
   width: 100%;
   height: 100%;
   background: none;
 }
-.example-sidenav-fab-container mat-sidenav {
+.sidenav-container mat-sidenav {
   max-width: 332px;
   width: 332px;
 }
 .sidebar {
-  padding: 100px 20px 0;
+  padding: 100px 30px 0;
 }
 .col-toggle-buttons {
   margin-right: 25px;
@@ -170,7 +174,7 @@ mat-toolbar {
 .hover-window-content > .gm-style-iw {
   padding-right: 0;
 }
-.hover-window-content > hr {
+hr {
   border: 0;
   height: 0;
   padding: 0;
@@ -185,7 +189,7 @@ mat-toolbar {
 }
 .hover-window-content > .mat-subheading-2 {
   margin-bottom: 10px;
-  font-weight: 700;
+  font-weight: 600;
 }
 
 .example-container {
@@ -206,7 +210,7 @@ mat-toolbar {
   width: 50px;
 }
 .hover-table-value {
-  font-weight: 700;
+  font-weight: 600;
   width: 50px;
   text-align: right;
 }
@@ -251,7 +255,7 @@ mat-toolbar {
 .custom-content > .mat-title {
   margin: 0;
   padding: 0;
-  font-weight: 700;
+  font-weight: 600;
   /* font-size: 20px; */
 }
 .si-content {
@@ -260,16 +264,60 @@ mat-toolbar {
   margin-right: 0;
   padding-right: 0;
 }
-.section-icon {
+.icon-floating {
   position: absolute;
-  top: 105px;
+  top: 85px;
   left: 40px;
   z-index: 5000;
 }
-.section-icon > .mat-subheading-2 {
-  font-size: 18px;
-  font-weight: 700;
+
+.icon-header {
+  margin: 20px 0 10px;
+}
+.icon-header > .mat-subheading-2 {
+  // font-size: 18px;
+  font-weight: 600;
   color: #444;
   padding-bottom: 0;
   margin-bottom: 0;
+}
+.node-content-wrapper {
+  width: 100%;
+}
+.tree-node-level-1 {
+  border-bottom: 1px solid $light-grey;
+  padding: 12px 0 10px 0;
+}
+.tree-node-level-2 {
+  padding: 12px 0 2px 0;
+}
+.sidenav-row-value {
+  text-align: right;
+  font-weight: 600;
+}
+.tree-node-level-1 .sidenav-row-name, .tree-node-level-1 .sidenav-row-value {
+  font-size: 14px;
+}
+.tree-node-level-2 .sidenav-row-name, .tree-node-level-2 .sidenav-row-value {
+  font-size: 12px;
+}
+
+.toggle-children-wrapper .toggle-children {
+  height: 18px;
+  width: 18px;
+  top: 3px;
+}
+
+.toggle-children-wrapper-collapsed .toggle-children {
+  background-image: url('/assets/images/icon-plus-grey.png');
+}
+
+.toggle-children-wrapper-expanded .toggle-children {
+  -webkit-transform: none;
+  transform: none;
+  background-image: url('/assets/images/icon-minus-grey.png');
+}
+
+.node-content-wrapper-active, .node-content-wrapper.node-content-wrapper-active:hover, .node-content-wrapper-active.node-content-wrapper-focused {
+    background: $light-blue;
 }
