--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,39 +1,4 @@
 <app-navbar></app-navbar>
 
-<div class="icon-floating icon-header" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
-  <img src="../assets/images/icon-plant.png" alt="Plant Icon"> <span class="mat-subheading-2">Plant Map</span>
-</div>
+<router-outlet></router-outlet>
 
-<mat-sidenav-container class="sidenav-container">
-
-  <mat-sidenav #sidenav position="end" mode="side" opened="false">
-    <app-sidenav-content [data]="currentPlant"></app-sidenav-content>
-    <!-- <app-sidenav-content [data]=""></app-sidenav-content> -->
-  </mat-sidenav>
-
-  <app-map></app-map>
-
-  <div class="overlay" fxLayout="row" fxLayoutAlign="end start">
-
-    <div class="col-toggle-buttons" fxFlex="10">
-
-      <mat-button-toggle-group #group="matButtonToggleGroup">
-
-        <mat-button-toggle value="map" checked="true">
-          <mat-icon>map</mat-icon>
-        </mat-button-toggle>
-
-        <mat-button-toggle value="list">
-          <mat-icon>list</mat-icon>
-        </mat-button-toggle>
-
-      </mat-button-toggle-group>
-
-      <!-- <button mat-mini-fab class="example-fab" (click)="sidenav.toggle()">
-        <mat-icon>location_on</mat-icon>
-      </button> -->
-
-    </div>
-  </div>
-
-</mat-sidenav-container>
