--- a/src/theme.scss
+++ b/src/theme.scss
@@ -405,12 +405,14 @@ hr {
 }
 
 /* Structure */
-.example-container {
+.list-view-container {
   margin-top: 150px;
   display: flex;
   flex-direction: column;
   min-width: 300px;
+  padding: 0 35px;
 }
+
 
 .example-header {
   min-height: 64px;
