--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,14 +8,14 @@
   <span class="fill-remaining-space"></span>
 
   <span class="nav-bg-grey">
-    <form id="form-search" fxFlexAlign="end">
+    <div id="form-search" fxFlexAlign="end">
 
       <mat-form-field class="example-full-width">
         <input class="mat-body-1" type="search" matInput placeholder="Plant Search">
         <mat-icon class="search-icon" matSuffix>search</mat-icon>
       </mat-form-field>
 
-    </form>
+    </div>
   </span>
 
 
