--- a/src/app/plant-selection/plant-selection.component.html
+++ b/src/app/plant-selection/plant-selection.component.html
@@ -29,10 +29,10 @@
     <!-- <app-sidenav-content [data]=""></app-sidenav-content> -->
   </mat-sidenav>
 
-
   <app-map [isHiddenBool]="isMapHidden"></app-map>
 
-  <app-list-view [isHiddenBool]="isListHidden"></app-list-view>
+  <app-table-demo [isHiddenBool]="isListHidden"></app-table-demo>
+  <!-- <app-list-view [isHiddenBool]="isListHidden"></app-list-view> -->
 
 
 </mat-sidenav-container>
