--- a/src/app/table-demo/table-demo.component.html
+++ b/src/app/table-demo/table-demo.component.html
@@ -16,36 +16,29 @@
     matSort
     #sortForDataSource="matSort">
 
-    <!-- Column Definition: ID -->
-    <ng-container cdkColumnDef="userId">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> ID </mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.id}} </mat-cell>
-    </ng-container>
-
-    <!-- Column Definition: Progress -->
-    <ng-container matColumnDef="progress">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Progress </mat-header-cell>
-      <mat-cell *matCellDef="let row">
-        <div class="demo-progress-stat">{{row.progress}}%</div>
-        <div class="demo-progress-indicator-container">
-          <div class="demo-progress-indicator"
-               [style.background]="row.progress > 50 ? 'green' : 'red'"
-               [style.opacity]="getOpacity(row.progress)"
-               [style.width.%]="row.progress"></div>
-        </div>
-      </mat-cell>
-    </ng-container>
-
     <!-- Column Definition: Name -->
-    <ng-container matColumnDef="userName">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.name}} </mat-cell>
+    <ng-container matColumnDef="location">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        Plant Name
+      </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.location}} </mat-cell>
     </ng-container>
 
     <!-- Column Definition: Color -->
-    <ng-container matColumnDef="color">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>Color</mat-header-cell>
-      <mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.color}} </mat-cell>
+    <ng-container matColumnDef="region">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        Region
+      </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.region}} </mat-cell>
+    </ng-container>
+
+    <!-- Column Definition: Location -->
+    <ng-container matColumnDef="yieldData">
+      <mat-header-cell *matHeaderCellDef 
+                       mat-sort-header>
+        Yield
+      </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.yieldData[4].value}} </mat-cell>
     </ng-container>
 
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
